--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,8 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="shortcut icon" type="imagex/png" href="/frontend/src/utils/icon/camera.ico">
+    <link rel="icon" type="icon" href="" title="câmera ícones"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ReactGram</title>
 
